syntax = "proto3";

package board;
option go_package = "github.com/ilyarogozin/task_board_go_project/gen/go/board/";

service BoardService {
  rpc CreateBoard (CreateBoardRequest) returns (BoardResponse);
  rpc GetBoard (GetBoardRequest) returns (BoardResponse);
}

message CreateBoardRequest {
  string title = 1;
  string description = 2;
  string owner_id = 3;
}

message GetBoardRequest {
  string id = 1;
}

message BoardResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string owner_id = 4;
}